--- a/hvx.cabal
+++ b/hvx.cabal
@@ -28,8 +28,8 @@ library
   -- closed type families need ghc>=7.8 which has base==4.7
   build-depends    : base < 5 && >= 4.7
                    , QuickCheck > 2.5
-                   , hmatrix >= 0.18.0.1 && < 0.19
-                   , deepseq >= 1.4.3.0 && < 1.5
+                   , hmatrix >= 0.18.0.1 && < 0.21
+                   , deepseq >= 1.4.3.0 && < 1.6
   hs-source-dirs   : src
   default-language : Haskell2010
   ghc-options      : -Wall
@@ -39,10 +39,23 @@ test-suite haskell-tests
   build-depends    : base < 5
                    , QuickCheck > 2.5
                    , hspec
-                   , hmatrix >= 0.18.0.1 && < 0.19
-                   , deepseq >= 1.4.3.0 && < 1.5
+                   , hmatrix >= 0.18.0.1 && < 0.21
+                   , deepseq >= 1.4.3.0 && < 1.6
   hs-source-dirs   : test, src
   main-is          : Spec.hs
+  other-modules    : HVX
+                   , HVX.BlackBoxTests.HuberTestSpec
+                   , HVX.BlackBoxTests.ManyvarTestSpec
+                   , HVX.Internal.Constraints
+                   , HVX.Internal.DCP
+                   , HVX.Internal.Matrix
+                   , HVX.Internal.Primitives
+                   , HVX.Internal.Solvers
+                   , HVX.Internal.SymbolicSubgrad
+                   , HVX.Internal.TestUtil
+                   , HVX.Internal.Util
+                   , HVX.Primitives
+                   , HVX.SymbolicSubgradSpec
   default-language : Haskell2010
   ghc-options      : -Wall
 
@@ -58,7 +71,8 @@ test-suite shell-tests
                    , directory
                    , process
                    , filepath
-                   , deepseq >= 1.4.3.0 && < 1.5
+                   , hmatrix >= 0.18.0.1 && < 0.21
+                   , deepseq >= 1.4.3.0 && < 1.6
   hs-source-dirs   : test
   main-is          : DcpTests.hs
   default-language : Haskell2010
@@ -69,9 +83,9 @@ executable demo
   main-is          : demo.hs
   build-depends    : base < 5 && >= 4.7
                    , QuickCheck > 2.5
-                   , hmatrix >= 0.18.0.1 && < 0.19
+                   , hmatrix >= 0.18.0.1 && < 0.21
                    , hvx
-                   , deepseq >= 1.4.3.0 && < 1.5
+                   , deepseq >= 1.4.3.0 && < 1.6
   default-language : Haskell2010
   ghc-options      : -Wall
 
@@ -80,8 +94,8 @@ executable subgrad
   main-is          : subgrad.hs
   build-depends    : base < 5 && >= 4.7
                    , QuickCheck > 2.5
-                   , hmatrix >= 0.18.0.1 && < 0.19
+                   , hmatrix >= 0.18.0.1 && < 0.21
                    , hvx
-                   , deepseq >= 1.4.3.0 && < 1.5
+                   , deepseq >= 1.4.3.0 && < 1.6
   default-language : Haskell2010
   ghc-options      : -Wall
